--- a/roles/rhsso/tasks/remove_identityprovider.yml
+++ b/roles/rhsso/tasks/remove_identityprovider.yml
@@ -44,6 +44,13 @@
       name: Restart master controllers
       become: yes
       shell: /usr/local/bin/master-restart controllers
+    -
+      name: "Wait for API to come back up"
+      shell: "oc get namespaces"
+      register: "namespaces_list"
+      until: namespaces_list.stdout != ""
+      retries: 60
+      delay: 5
 
 # Delete users and identities created by rhsso
 -
