--- a/roles/rhsso/tasks/set_config.yml
+++ b/roles/rhsso/tasks/set_config.yml
@@ -56,5 +56,9 @@
 - set_fact:
     rhsso_cluster_admin_email: admin@example.com
 
+# rhsso/defaults/main.yml line 6
+- set_fact:
+    rhsso_realm: openshift
+
 #- name: Create config secret
 #  shell: oc create secret generic integreatly-operator-product-config --from-file=/tmp/generated_manifest --type=application/json -n {{webapp_namespace}}
