--- a/roles/rhsso/tasks/set_config.yml
+++ b/roles/rhsso/tasks/set_config.yml
@@ -61,6 +61,9 @@
     rhsso_realm: openshift
 
 # rhsso/defaults/main.yml line 9
+- debug:
+    msg: "****setting rhsso client*****"
+
 - set_fact:
     rhsso_client_id: openshift-client
 
