--- a/playbooks/install_webapp.yml
+++ b/playbooks/install_webapp.yml
@@ -15,5 +15,6 @@
         rhsso_namespace: "{{ eval_rhsso_namespace }}"
 #        rhsso_client_id: "{{ rhsso_client_id }}"
         rhsso_client_id: "openshift-client"
+        original_identityprovider_config_path: /etc/origin/master/idp-config.integreatly-original.yaml
       tags: ['rhsso', 'remote']
       when: (run_master_tasks | default(true) | bool) and webapp
