--- a/roles/rhsso/tasks/set_config.yml
+++ b/roles/rhsso/tasks/set_config.yml
@@ -76,5 +76,9 @@
 - set_fact:
     rhsso_identity_provider_ca_cert_path: ca.crt
 
+# rhsso/defaults/main.yml line 18
+- set_fact:
+    rhsso_master_restart_shim_path: /usr/local/bin/master-restart
+
 #- name: Create config secret
 #  shell: oc create secret generic integreatly-operator-product-config --from-file=/tmp/generated_manifest --type=application/json -n {{webapp_namespace}}
