--- a/roles/rhsso/tasks/set_config.yml
+++ b/roles/rhsso/tasks/set_config.yml
@@ -97,5 +97,9 @@
 - set_fact:
     rhsso_admin_realm: master
 
+# rhsso/defaults/main.yml line 41
+- set_fact:
+    rhsso_cluster_admin_password: Password1
+
 #- name: Create config secret
 #  shell: oc create secret generic integreatly-operator-product-config --from-file=/tmp/generated_manifest --type=application/json -n {{webapp_namespace}}
