--- a/roles/integreatly_operator/tasks/install.yml
+++ b/roles/integreatly_operator/tasks/install.yml
@@ -19,3 +19,5 @@
 
 - name: Create Installation custom resource in {{ integreatly_operator_ns_name }}
   shell: oc apply -f /tmp/integreatly-customresource.yml -n {{ integreatly_operator_ns_name }}
+
+- include_tasks: ./set_config.yml
