test: revert back to normal rhsso with removed import vars

--- a/playbooks/install_services.yml
+++ b/playbooks/install_services.yml
@@ -11,8 +11,8 @@
       tags: ['nexus']
       when: nexus
 
-    - name: Expose vars
-      include_vars: "../roles/rhsso/defaults/main.yml"
+#    - name: Expose vars
+#      include_vars: "../roles/rhsso/defaults/main.yml"
     -
       name: Set eval_app_host var
       set_fact:
