Refactor master vars checking and setting to task files

--- a/playbooks/customise_web_console_uninstall.yml
+++ b/playbooks/customise_web_console_uninstall.yml
@@ -1,8 +1,10 @@
 ---
-- import_playbook: "./prerequisites.yml"
 - hosts: localhost
   gather_facts: true
   tasks:
+    - include_role:
+        name: prerequisites
+        tasks_from: uninstall
     - name: Customise Openshift Console
       include_role:
         name: customise-web-console
