--- a/roles/openshift/tasks/main.yml
+++ b/roles/openshift/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: "Set master vars"
+  include_tasks: set_master_vars.yml
+  when: run_master_tasks | default(true) | bool
+
 - name: "Logging into Openshift Cluster: {{ openshift_master_public_url }}"
   include_tasks: login.yml
   when: openshift_login
