--- a/roles/integreatly_operator/defaults/main.yml
+++ b/roles/integreatly_operator/defaults/main.yml
@@ -1,6 +1,6 @@
 integreatly_operator_ns_name: "{{ns_prefix | default('')}}integreatly-operator"
-integreatly_operator_version: master
-integreatly_operator_deploy: 'https://raw.githubusercontent.com/integr8ly/integreatly-operator/{{integreatly_operator_version}}/deploy'
+integreatly_operator_version: INTLY-1897-install-rhsso
+integreatly_operator_deploy: 'https://raw.githubusercontent.com/sedrocheintegreatly-operator/{{integreatly_operator_version}}/deploy'
 integreatly_operator_template: '{{ integreatly_operator_deploy }}/operator.template.yaml'
 integreatly_operator_crds:
   - "{{ integreatly_operator_deploy }}/crds/installation.crd.yaml"
