--- a/inventories/group_vars/all/manifest.yaml
+++ b/inventories/group_vars/all/manifest.yaml
@@ -5,8 +5,8 @@ integreatly_version: master
 #Integreatly Operator
 integreatly_operator: false
 integreatly_operator_ns_name: "{{ns_prefix | default('')}}integreatly-operator"
-integreatly_operator_version: master
-integreatly_operator_deploy: 'https://raw.githubusercontent.com/integr8ly/integreatly-operator/{{integreatly_operator_version}}/deploy'
+integreatly_operator_version: INTLY-1897-install-rhsso
+integreatly_operator_deploy: 'https://raw.githubusercontent.com/sedroche/integreatly-operator/{{integreatly_operator_version}}/deploy'
 
 # controls whether threescale is installed or not.
 threescale: true
